# scopus_search_code

./: .agyignore  .claudeignore  .coveragerc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README.ru.md  clean_comments.py  docker-compose.yml  entrypoint.sh  export_skeleton.py  pyproject.toml  pytest.ini  requirements.txt  run_export_skeleton.py  run_solid_dashboard.py  run_tests.py  solid_config.json
.claude/commands/: feature-workflow.md  post-merge-sync.md  tech-spec.md
.gemini/rules/: backend-architecture.md  explicit-file-creation.md  frontend-architecture.md
.github/: dependabot.yml
.github/workflows/: e2e.yml  frontend-tests.yml  keep_alive.yml  seeder.yml  tests.yml
.tmp_heuristics_tests/: tmp_module.py
alembic/: env.py
alembic/versions/: 0000_fix_alembic_version_column.py  0002_add_is_seeded_to_articles.py  0003_create_refresh_tokens_table.py  0004_replace_doi_unique_constraint_with_partial_index.py  0005_add_search_history.py  0005b_rename_date_add_scopus_fields.py  0006_refactor_article_ownership.py  0007_drop_article_legacy_columns.py  0008_add_filter_indexes.py  0009_add_scopus_query_to_search_history.py  0010_add_user_id_index_to_refresh_tokens.py  0011_create_password_reset_tokens_table.py  0012_add_last_offset_to_seeder_keywords.py  0013_fix_schema_drift.py  0014_functional_indices_lower.py  0015_trim_search_history_over_limit.py  0016_trgm_gist_search_indices.py  0017_publication_date_index.py  a1b2c3d4e5f6_create_seeder_keywords_table.py  c7493a459c08_add_created_at_to_users.py  c8f5490cc436_merge_auth_and_main_heads.py  d2c4aaedfd4e_merge_doi_index_and_main_head.py  e0e976b018a8_initial_migration.py  f9a3c1e2b7d4_drop_unavailable_scopus_fields.py
app/: asgi_debug.py  config.py  main.py
app/core/: cookie_constants.py  dependencies.py  logging_config.py  nl_pivot_rate_limit.py  password_reset_utils.py  refresh_token_utils.py  security.py  sentry_config.py
app/demo/: solid_llm_demo.py
app/infrastructure/: database.py  email_service.py  openrouter_pivot_parser.py  postgres_article_repo.py  postgres_catalog_repo.py  postgres_search_history_repo.py  postgres_search_result_repo.py  (+3 more)
docs/: scopus_project_mask.txt
frontend/: .gitignore  .npmrc  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  test-output.txt  tsconfig.json  vercel.json  vite.config.ts
scripts/: seed_db.py
tests/: conftest.py  requirements-test.txt
tools/solid_dashboard/: README.md  README.ru.md  pyproject.toml  requirements.txt
tools/solid_dashboard/solid_dashboard/: __main__.py  config.py  schema.py
tools/solid_dashboard/solid_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/solid_dashboard/solid_dashboard/adapters/: cohesion_adapter.py  import_graph_adapter.py  import_linter_adapter.py  radon_adapter.py
(+339 files in other folders)
