[project]
name = "scopus-search-code"
version = "0.1.0"
description = "Scopus search and analysis project"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
# Максимальная длина строки увеличина со стандартной (88) до 115
line-length = 115
# Версия Python для оптимизации кода
target-version = "py312"
# Исключаем alembic чтобы убрать ошибки по импорту модулей не в начале файла
exclude = [
    "alembic",
]

[tool.ruff.lint]
# Включаем базовые правила: E (ошибки стиля), F (логические ошибки), I (сортировка импортов)
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv(override=False) намеренно стоит до app-импортов:
# Pydantic Settings читает .env при старте, load_dotenv должен успеть раньше.
# E402/I001 в этом файле — intentional, а не ошибка.
"tests/conftest.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.12"
# Запрещаем писать функции без указания типов (например: def foo(x: int) -> str:)
disallow_untyped_defs = true
# Игнорируем ошибки отсутствия типов во внешних библиотеках (чтобы не ругался на SQLAlchemy)
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
